--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Grandstander:wght@100;200;300;400;500;600;700;800;900&family=Inter:wght@100&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -6,12 +7,15 @@
   text-decoration: none !important;
   box-sizing: border-box;
 }
+
 .ff_Grandstander {
   font-family: "Grandstander", cursive;
 }
+
 .ff_inter {
   font-family: "Inter", sans-serif;
 }
+
 :root {
   --fs-xsm: 12px;
   --fs-sm: 16px;
@@ -21,24 +25,458 @@
   --fs-xxl: 32px;
   --fs-3xl: 70px;
 }
+
 .fs_xsm {
   font-size: var(--fs-xsm);
 }
+
 .fs_sm {
   font-size: var(--fs-sm);
 }
+
 .fs_md {
   font-size: var(--fs-md);
 }
+
 .fs_lg {
   font-size: var(--fs-lg);
 }
+
 .fs_xl {
   font-size: var(--fs-xl);
 }
+
 .fs_xxl {
   font-size: var(--fs-xxl);
 }
+
 .fs_3xl {
   font-size: var(--fs-3xl);
+}
+
+/* bacvkground color */
+.navBackgroud {
+  background: #08012C;
+  opacity: 0.8;
+}
+
+.bg_blue {
+  background-color: #090128;
+}
+
+/* shadow */
+.text_shadow {
+  -webkit-text-stroke: 1px #BA5EA7 !important;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+/* bg_images */
+.heroImage {
+  background-image: url(./assets/img/png/heroImage.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* btn */
+.heroBtn {
+  border-radius: 8px;
+  border: 1px solid #FFFFFF;
+  padding: 15px 50px;
+  background: linear-gradient(180deg, #FF00F4 0%, #3D78FE 100%);
+  transition: 1s ease-in-out;
+}
+
+/* other */
+.radialGridient {
+  /* background: radial-gradient(56.32% 89.94% at 50.44% 49.6%, #003869 0%, #070B15 100%); */
+  opacity: 0.8;
+  background-color: #090128 !important;
+}
+
+.transform_rotate {
+  transform: rotate(-5deg);
+}
+
+.opacity_image {
+  opacity: 0.7 !important;
+}
+
+.linearGridient {
+  background: linear-gradient(180deg, #000013 0%, rgba(1, 0, 19, 0.68) 15.94%, rgba(4, 0, 25, 0.56) 50.61%, rgba(6, 0, 29, 0.2) 72.8%, #090128 100%);
+}
+
+.border_image {
+  border: 3.36px solid #1A8BD7;
+  border-radius: 9px;
+}
+
+.image_center {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* after */
+.navLinks::before {
+  content: '';
+  position: absolute;
+  bottom: -2px;
+  right: 0;
+  width: 0;
+  height: 3px;
+  transition: 0.7s ease-in-out;
+  background-color: white;
+}
+
+.navLinks:hover::before {
+  width: 100%;
+  left: 0;
+}
+
+/* animation */
+.animation_move_y {
+  animation: moves 3s ease-in-out infinite;
+}
+
+@keyframes moves {
+  50% {
+    transform: translateY(-35px);
+  }
+}
+
+.animation_scroll_x {
+  animation: scrole 10s linear infinite;
+}
+
+@keyframes scrole {
+  50% {
+
+    transform: translate(-750%, -80px);
+  }
+}
+
+.animation_scroolx {
+  animation: scrowl 10s linear infinite;
+}
+
+@keyframes scrowl {
+  50% {}
+}
+
+.animation_move_y1 {
+  animation: moves1 3s 1s ease-in-out infinite;
+}
+
+@keyframes moves1 {
+  50% {
+    transform: translate(-40px, 5px);
+  }
+}
+
+.animation_scrool {
+  animation: scrool 9s linear infinite reverse;
+}
+
+@keyframes scrool {
+  0% {
+    rotate: 360deg;
+  }
+
+  50% {
+    rotate: 180deg;
+  }
+
+  100% {
+    rotate: 360%;
+  }
+}
+
+.animation_scrool_reverse {
+  animation: scrool 8s 2s linear infinite;
+}
+
+@keyframes scrool {
+  0% {
+    rotate: 360deg;
+  }
+
+  50% {
+    rotate: 180deg;
+  }
+
+  100% {
+    rotate: 360%;
+  }
+}
+
+/* hover */
+.heroBtn:hover {
+  background: #FF00F4;
+}
+
+/* media screen */
+@media (max-width:576px) {
+  .heroImage {
+    background-image: url(./assets/img/png/heroImage.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .bg_sky_image {
+    background-image: url(./assets/img/png/bgSky.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .universe_image {
+    background-image: url(./assets/img/png/universeImage.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  :root {
+    --fs-xsm: 12px;
+    --fs-sm: 14px;
+    --fs-md: 15px;
+    --fs-lg: 17px;
+    --fs-xl: 20px;
+    --fs-xxl: 26px;
+    --fs-3xl: 45px;
+  }
+
+  .vh_65_xsm {
+    min-height: 65vh;
+  }
+
+  .w_240_xsm {
+    width: 240px;
+  }
+
+  .w_40_xsm {
+    width: 40px;
+  }
+
+  .w_100_xsm {
+    width: 100%;
+  }
+
+  .h_100_xsm {
+    height: 100%;
+  }
+
+  .h_200_xsm {
+    height: 200px;
+  }
+}
+
+@media (min-width:576px) {
+  .heroImage {
+    background-image: url(./assets/img/png/heroImage.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .bg_sky_image {
+    background-image: url(./assets/img/png/bgSky.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .universe_image {
+    background-image: url(./assets/img/png/universeImage.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .vh_65_sm {
+    min-height: 65vh;
+  }
+
+  :root {
+    --fs-xsm: 12px;
+    --fs-sm: 14px;
+    --fs-md: 15px;
+    --fs-lg: 17px;
+    --fs-xl: 20px;
+    --fs-xxl: 26px;
+    --fs-3xl: 45px;
+  }
+
+  .w_340_sm {
+    width: 340px;
+  }
+
+  .w_540_sm {
+    width: 540px;
+  }
+}
+
+@media (min-width:768px) {
+  :root {
+    --fs-xsm: 12px;
+    --fs-sm: 15px;
+    --fs-md: 16px;
+    --fs-lg: 18px;
+    --fs-xl: 22px;
+    --fs-xxl: 28px;
+    --fs-3xl: 50px;
+  }
+
+  .vh_75_md {
+    min-height: 75vh;
+  }
+
+  .w_450_md {
+    width: 450px;
+  }
+
+  .w_650_md {
+    width: 650px;
+  }
+}
+
+@media (min-width:992px) {
+  :root {
+    --fs-xsm: 12px;
+    --fs-sm: 15px;
+    --fs-md: 16px;
+    --fs-lg: 19px;
+    --fs-xl: 23px;
+    --fs-xxl: 30px;
+    --fs-3xl: 58px;
+  }
+
+  .vh_85_lg {
+    min-height: 85vh;
+  }
+
+  .w_550_lg {
+    width: 550px;
+  }
+
+  .w_750_lg {
+    width: 750px;
+  }
+
+  .transform_images_lg {
+    transform: rotate(5deg);
+  }
+
+}
+
+@media (min-width:1200px) {
+  :root {
+    --fs-xsm: 12px;
+    --fs-sm: 16px;
+    --fs-md: 18px;
+    --fs-lg: 20px;
+    --fs-xl: 24px;
+    --fs-xxl: 32px;
+    --fs-3xl: 70px;
+  }
+
+  .heroImage {
+    background-image: url(./assets/img/png/heroImage.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+
+  }
+
+  .bg_sky_image {
+    background-image: url(./assets/img/png/bgSky.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+
+  }
+
+  .vh_100_xl {
+    min-height: 100vh;
+  }
+
+  .w_750_xl {
+    width: 750px;
+  }
+
+  .w_1019_xl {
+    width: 1019px;
+  }
+
+  .mw_480_xl {
+    max-width: 480px;
+  }
+
+  .positionImage_xl {
+    bottom: -30%;
+    left: 6%;
+  }
+
+  .positionImage1_xl {
+    right: 8%;
+    bottom: -22%;
+  }
+
+  .iamge_position_xl {
+    right: 2%;
+    top: 10%;
+  }
+
+  .iamge_position2_xl {
+    left: 0%;
+    bottom: 6%;
+    z-index: -1;
+  }
+
+  .astroger_absolute_xl {
+    right: 9%;
+    top: 7%;
+  }
+
+  .layer_absolute2_xl {
+    top: 0;
+    left: 0;
+    opacity: 0.9;
+    z-index: 0;
+  }
+
+  .layer_absolute_xl {
+    bottom: 0;
+    z-index: 1;
+    left: 0;
+  }
+
+  .juptiter_absolute_xl {
+    right: 0;
+    top: 42%;
+  }
+
+  .urnaus_absolute_xl {
+    left: 15%;
+    top: 11%;
+  }
+}
+
+@media (min-width:1400px) {
+  .positionImage_xxl {
+    bottom: -29%;
+    left: 8%;
+  }
+
+  .w_1119_xxl {
+    width: 1119px;
+  }
+
+  .positionImage1_xxl {
+    right: 10%;
+    bottom: -20%;
+  }
+
+  .astroger_absolute_xxl {
+    right: 14%;
+    top: 4%;
+  }
+
+  .urnaus_absolute_xxl {
+    left: 15%;
+    top: 7%;
+  }
 }
