--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Grandstander:wght@100;200;300;400;500;600;700;800;900&family=Inter:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Grandstander:wght@100;200;300;400;500;600;700;800;900&family=Inter:wght@100&family=Mandali&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -7,10 +8,13 @@
   box-sizing: border-box;
 }
 .ff_Grandstander {
-  font-family: "Grandstander", cursive;
+  font-family: "Grandstander", sans-serif;
 }
 .ff_inter {
   font-family: "Inter", sans-serif;
+}
+.ff_madali {
+  font-family: "Mandali", sans-serif;
 }
 :root {
   --fs-xsm: 12px;
